assets/css/main.css
html {
  height: 100%;
}

body {
  margin: 0;
  padding: 0;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: linear-gradient(#23135a, rgb(35, 163, 214), rgb(15, 11, 238));
}

#piano {
  display: flex;
  position: relative;
  margin-left: 4px;
  flex-direction: row;
  right: 170px;
}

.white-key {
  width: 40px;
  height: 120px;
  background-color: rgb(219, 25, 25);
  border: 4px solid black;
  border-radius: 0 0 6px 6px;
  margin-left: -4px;
  outline: none;
  cursor: pointer;
}

.white-active {
  background-color: #C0C0C0;
}

.black-key {
  position: absolute;
  width: 24px;
  height: 80px;
  background-image: linear-gradient(#000000, #303030);
  border: 3px solid black;
  border-radius: 0 0 2px 2px;
  outline: none;
  cursor: pointer;
}

.black-active {
  background-image: linear-gradient(#c28f8f, #7a7070);
}

.Db4-key {
  left: 22px;
}

.Eb4-key {
  left: 58px;
}

.Gb4-key {
  left: 130px;
}

.Ab4-key {
  left: 166px;
}

.Bb4-key {
  left: 202px;
}

.Db5-key {
  left: 274px;
}

.Eb5-key {
  left: 310px;
}

.Gb5-key {
  left: 382px;
}

.Ab5-key {
  left: 418px;
}

.Bb5-key {
  left: 454px;
}

.drums {
  background-image: linear-gradient(rgb(184, 5, 184), rgb(51, 51, 51));
  position: relative;
  right: 40px;
  left: 194px;
  bottom: 68px;
  width: 364px;
  height: 80px;
}

.play {
  background-image: linear-gradient(rgb(184, 5, 184), rgb(51, 51, 51));
  /* height: 100%; */
  width: 20%;
  padding: 0;
  font-size: 30px;
  text-align: center;
  border: black solid 2px;
}

/* Header Styling */
header {
  background: linear-gradient(to left,rgba(54,194,182,0.96) 0,rgba(62,188,207,0.96) 100%);
  border-bottom: 1px solid rgba(0,0,0,.1);
  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
  display: block;
  position: fixed;
  width: 100%;
  align-content: center;
  align-self: flex-start;
  height: -40%;
  z-index: 1000;
  text-align: center;
}

header > nav > ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  list-style: none;
  margin: 0;
  padding: 0;
}

header > nav > ul > li {
  flex: 0 1 auto;
  margin: 0;
  padding: 0;
  position: relative;
  transition: all linear 0.1s;	
}
  
header > nav > ul > li:hover {
  background: rgba(58,162,173,1);
}

header > nav > ul > li a + div {
  background: linear-gradient(to bottom,rgba(58,162,173,1) 0,rgba(62,188,207,0.96) 100%);;
  border-radius: 0 0 2px 2px;
  box-shadow: 0 3px 1px rgba(0,0,0,.05);
  display: none;
  font-size: 1rem;
  position: absolute;
  width: 195px;
}
    
header > nav > ul > li:hover a + div {
  display: block;
}

header > nav > ul > li a + div > ul {
  list-style-type: none;	
}
      
header > nav > ul > li a + div > ul > li {
  margin: 0;
  padding: 0;
}
					
header > nav > ul > li a + div > ul > li > a {
  color: rgba(255,255,255,.9);
  display: block;	
  font-size: .75rem;
  letter-spacing: 1.5px;
  padding: .25rem 1.5rem;
  text-decoration: none;
  text-transform: uppercase;
}
						
header > nav > ul > li a + div > ul > li:hover > a {
  background-color: rgba(0,0,0,.15);	
}
	
header > nav > ul > li > a {
  align-items: flex-start;
  color: #fff;
  display: flex;
  font-size: 1.55rem;
  font-weight: 200;
  letter-spacing: 1px;
  max-width: 130px;
  padding: 1rem 1.5rem;
  text-decoration: none;
  text-shadow: 0 1px 1px rgba(0,0,0,.1);
  transition: all linear 0.1s;
}

@media (min-width: 990px) {
  header > nav > ul > li > a {
    max-width: 500px;
    font-size: 1.7rem;
    line-height: 2rem;
  }
  
  header > nav > ul > li > a > div > span {
	  margin: 4px 0 0;  
  }
}

ul#menu li {
  display:inline;
}

/* Sounds */
#one, #two, #piano-one, #three {
  background-image: linear-gradient(rgb(240, 2, 240), rgb(12, 129, 197));
  outline: none;
  height: 80px;
  width: 75px;
}

